Fix the worship stick sun clipping at the edges

--- a/components/WorshipStick/styles.module.scss
+++ b/components/WorshipStick/styles.module.scss
@@ -3,7 +3,6 @@
   position: relative;
   font-size: 0; // Remove the 4px vertical space between consecutive block elements.
   transition: transform 2.5s ease-in-out;
-  overflow: hidden;
 }
 
 .base {
